# module-6-tugas-santo

./: Dockerfile  README.md  app.py  pyproject.toml  pyvenv.cfg
Test/: confitest.py  test_animal.py  test_employee.py
routes/: animal.py  employee.py
views/: animal.py  employee.py
