[tool.poetry]
name = "pp-tugaspython"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pytest = "^8.3.3"
requests = "^2.32.3"
sqlalchemy = "^2.0.35"
jsonify = "^0.5"
blueprint = "^3.4.2"
flask-swagger = "^0.2.14"
docker = "^7.1.0"
coverage = "^7.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
